<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ruleta_fondo">

    <TextView
        android:id="@+id/tvRegistroTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_titulo"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/etNombreCompleto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre_completo"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvRegistroTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/etNombreCompleto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etClave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contrasena"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/etCorreo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_aceptar"
        android:textColor="#FFFF00"
        android:backgroundTint="#000000"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/etClave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
